--- a/Data Analysis on a Cars dataset.ipynb
+++ b/Data Analysis on a Cars dataset.ipynb
@@ -1,27 +1,56 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Cars Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Q. 1) Instruction ( For Data Cleaning ) - Find all Null Values in the dataset. If there is any null value in any column, then fill it with the mean of that column.\n",
+    "\n",
+    "Q. 2) Question ( Based on Value Counts )- Check what are the different types of Make are there in our dataset. And, what is the count (occurrence) of each Make in the data ?\n",
+    "\n",
+    "Q. 3) Instruction ( Filtering ) - Show all the records where Origin is Asia or Europe.\n",
+    "\n",
+    "Q. 4) Instruction ( Removing unwanted records ) - Remove all the records (rows) where Weight is above 4000.\n",
+    "\n",
+    "Q. 5) Instruction ( Applying function on a column ) - Increase all the values of 'MPG_City' column by 3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ec472dc260947919259a244485295475f215e495ad177c1fef7dadbba1178947"
+    "hash": "31b4ee29e45cf71f5a158e34067ec8a7a60d9daad9cdb86ca6713becaa589907"
    }
   }
  },
